--- a/index.html
+++ b/index.html
@@ -417,12 +417,6 @@
                 <p>Faisalabad, Pakistan 38000</p>
               </div>
 
-              <div class="email">
-                <i class="bi bi-envelope"></i>
-                <h4>Email:</h4>
-                <p>hamzatarif124@gmail.com</p>
-              </div>
-
               <div class="phone">
                 <i class="bi bi-phone"></i>
                 <h4>Call:</h4>
@@ -435,28 +429,11 @@
 
           <div class="col-lg-8 mt-5 mt-lg-0">
 
-            <form action="forms/contact.php" method="post" role="form" class="php-email-form">
-              <div class="row">
-                <div class="col-md-6 form-group">
-                  <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
-                </div>
-                <div class="col-md-6 form-group mt-3 mt-md-0">
-                  <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" required>
-                </div>
+            <div class="email">
+                <i class="bi bi-envelope"></i>
+                <h4>Email:</h4>
+                <p>hamzatarif124@gmail.com</p>
               </div>
-              <div class="form-group mt-3">
-                <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" required>
-              </div>
-              <div class="form-group mt-3">
-                <textarea class="form-control" name="message" rows="5" placeholder="Message" required></textarea>
-              </div>
-              <div class="my-3">
-                <div class="loading">Loading</div>
-                <div class="error-message"></div>
-                <div class="sent-message">Your message has been sent. Thank you!</div>
-              </div>
-              <div class="text-center"><button type="submit">Send Message</button></div>
-            </form>
 
           </div>
 
@@ -471,7 +448,7 @@
   <footer id="footer">
     <div class="container">
       <h3>Hamza Tarif</h3>
-      <p>Contact through Email or Contact Form above to get the services.</p>
+      <p>Contact through Email or Social media accounts.</p>
       <div class="social-links">
         <a href="http://www.facebook.com/hamza.tarif.96/" target="_blank" class="facebook"><i class="bx bxl-facebook"></i></a>
         <a href="https://www.linkedin.com/in/hamza-tarif-583302150/" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
