--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@
 
         <div class="row mt-1">
 
-          <div class="col-lg-4">
+          <div class="col-lg-6">
             <div class="info">
               <div class="address">
                 <i class="bi bi-geo-alt"></i>
@@ -427,13 +427,14 @@
 
           </div>
 
-          <div class="col-lg-8 mt-5 mt-lg-0">
-
+          <div class="col-lg-6 mt-5">
+           <div class="info">
             <div class="email">
                 <i class="bi bi-envelope"></i>
                 <h4>Email:</h4>
                 <p>hamzatarif124@gmail.com</p>
               </div>
+            </div>
 
           </div>
 
