--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@
 
           </div>
 
-          <div class="col-lg-6 mt-5">
+          <div class="col-lg-6">
            <div class="info">
             <div class="email">
                 <i class="bi bi-envelope"></i>
