--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 
 <body>
 
+
   <!-- ======= Mobile nav toggle button ======= -->
   <!-- <button type="button" class="mobile-nav-toggle d-xl-none"><i class="bi bi-list mobile-nav-toggle"></i></button> -->
   <i class="bi bi-list mobile-nav-toggle d-xl-none"></i>
@@ -459,6 +460,7 @@
   </footer><!-- End Footer -->
 
   <div id="preloader"></div>
+  <a href="assets/HamzaTarifCV.pdf" download class="btn btn-info btn-sm" style="position: fixed; bottom: 20px; right: 60px; color: white; font-weight: bold; background-color: #1ABC9C "><i class="fa fa-arrow-circle-down"></i> &nbsp Download CV/Resume</a>
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
   <!-- Vendor JS Files -->
